tests/golden/err-import-cycle/expected_error.txt
error: 循環 import を検出しました: ./a.clum -> ./b.clum -> ./a.clum
 --> ./b.clum:2:3
  |
2 |   a
  |   ^
